============
 Condor2Nav
============

Version: 0.4
============
- Sceneries UTC Offset support removed
- Nasty bug (introduced in 0.3) with writing to a local file fixed (thanks bo)

Version: 0.3
============
- Fixed bug for duplicated TP names in a scenery for XCSoar and LK8000 targets
- ActiveSync support added

Version: 0.2
============
- Support for LK8000 added
- Support for INI files comment added
- Not existing "AutoAdvance" PRF parameter problem fixed

Version: 0.1
============
- Initial version with XCSoar support