@@ -43,7 +43,7 @@ namespace condor2nav {
     // inputs
     static const char *XCSOAR_PROFILE_NAME;	     ///< @brief XCSoar profile file name to use for input. 
 
-    CFileParserINI _profileParser;               ///< @brief XCSoar profile file parser. 
+    std::auto_ptr<CFileParserINI> _profileParser;///< @brief XCSoar profile file parser. 
     const std::string _outputXCSoarDataPath;     ///< @brief The path to the output XCSoarData directory.
     std::string _outputCondor2NavDataPath;       ///< @brief The path to the output Condor2Nav directory.
     std::string _condor2navDataPath;             ///< @brief The Condor2Nav destination data directory path (in XCSoar format) on the target device that runs XCSoar.
